--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.20",
     "@fontsource/open-sans": "^4.4.5",
     "@fontsource/satisfy": "^4.4.5",
     "@headlessui/react": "^1.2.0",
@@ -18,6 +19,7 @@
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.3.1",
     "framer-motion": "^4.1.17",
+    "graphql": "^15.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "next": "11.0.0",
