--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "17.0.2",
     "react-content-loader": "^6.0.3",
     "react-countdown": "^2.3.2",
+    "react-currency-format": "^1.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.8.8",
     "react-icons": "^4.2.0",
