--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.3.1",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
+    "graphql-request": "^3.6.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "next": "11.0.0",
