--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.3.1",
+    "flutterwave-react-v3": "^1.2.0",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
     "graphql-request": "^3.6.1",
