--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "overlayscrollbars-react": "^0.2.2",
     "rc-drawer": "^4.3.1",
     "react": "17.0.2",
+    "react-carousel-minimal": "^1.4.1",
     "react-content-loader": "^6.0.3",
     "react-currency-format": "^1.0.0",
     "react-dom": "17.0.2",
