--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.3.1",
+    "embla-carousel-react": "^6.2.0",
     "flutterwave-react-v3": "^1.2.0",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
