--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-tabs": "^2.3.2",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
+    "prettier": "2.6.2",
     "rimraf": "^3.0.2",
     "tailwindcss": "^2.1.4",
     "tailwindcss-rtl": "^0.7.3",
